<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ADD8E6"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.onboarding.fragments.Onboarding3Fragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/find_the_perfect_roommate"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:paddingHorizontal="0dp"
        android:text="@string/onboarding3_main_text"
        android:textColor="#666666"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/ivOnboardingImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:src="@drawable/onboarding_viewpager_3"
        tools:ignore="ContentDescription" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ly_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/btn_onboarding3_login_background"
            android:padding="15dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/onboarding3_arrow_down"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </FrameLayout>


</LinearLayout>
