<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.onboarding.fragments.Onboarding1Fragment">

    <LinearLayout
        android:id="@+id/onboarding_1"
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:background="@drawable/onboarding_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/your_travel_app"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desciption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/main_text"
            android:textAlignment="center"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgv_main"
            android:layout_width="match_parent"
            android:layout_height="461dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/onboarding_nomads_moto" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cly_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <FrameLayout
            android:id="@+id/fl_button_next"
            android:layout_width="411dp"
            android:layout_height="105dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_next_background"
                android:contentDescription="@string/next"
                android:scaleType="centerInside" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>